--- a/halla-app/src/containers/App/style.less
+++ b/halla-app/src/containers/App/style.less
@@ -1,10 +1,17 @@
 // @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 
-html,
-body {
+.fullll {
   margin: 0;
   padding: 0;
   background: #222;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+html, body, #root, .app {
+  .fullll;
 }
 
 
@@ -12,6 +19,41 @@ body {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4em;
   color: #4d4d4d;
-  margin: 0 auto;
+  margin: 0;
   font-weight: 300;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+}
+
+hr {
+  width: 100%;
+  border-color: #656565;
+  margin: 10px 0;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 5px;
+}
+
+:-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment {
+  height: 30px;
+  display: block;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: rgb(39, 38, 39);
+  -webkit-border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid #673AB7;
+  -webkit-border-radius: 6px;
 }
