--- a/halla-app/src/containers/RightPane/style.less
+++ b/halla-app/src/containers/RightPane/style.less
@@ -36,6 +36,9 @@
 				margin: 10px 15px 0px 15px !important;
 				padding: 10px !important;
 				flex-shrink: 0;
+				background-color: rgba(72, 72, 72, 0.36) !important;
+				border-radius: 0 20px 20px !important;
+				border: solid 1px #663ab7 !important;
 
 				&.mine {
 					align-self: flex-end;
@@ -45,6 +48,16 @@
 					white-space: normal !important;
 					line-height: 1.5em !important;
 					color: #dedede !important;
+				}
+				h5, h4 {
+					margin: 5px 0;
+					font-weight: normal;
+				}
+				h5 {
+					font-style: italic;
+					color: #b08df1;
+					font-size: 13px;
+					margin-top: 0;
 				}
 			}
 
