--- a/halla-app/src/containers/LeftPane/style.less
+++ b/halla-app/src/containers/LeftPane/style.less
@@ -4,12 +4,11 @@
 	flex-direction: column;
 	flex-grow: 1;
 	height: 100%;
+	overflow: hidden;
 
 	.fixed {
-		padding: 15px;
-		height: 90px;
-		max-height: 90px;
-		min-height: 90px;
+		padding: 5px;
+		height: 40px;
 	}
 
 	.scrolled , > div {
@@ -21,10 +20,10 @@
 	}
 
 	.add-button {
-		right: 10px;
 		position: absolute;
-		top: 17px;
-		transform: scale(0.7);
+		bottom: 20px;
+		right: 20px;
+		height: 55px;
 	}
 
 	h2 {
