--- a/halla-app/src/containers/Home/style.less
+++ b/halla-app/src/containers/Home/style.less
@@ -29,6 +29,9 @@
 
 			button div {
 				height: 50px !important;
+				color: #663ab7;
+				line-height: 12px;
+				font-weight: bold;
 			}
 		}
 		> div:nth-child(2) {
