--- a/halla-app/src/containers/Home/style.less
+++ b/halla-app/src/containers/Home/style.less
@@ -36,7 +36,11 @@
 		}
 		> div:nth-child(2) {
 			height: 2px;
-    		margin-top: 5px;
+			margin-top: 5px;
+			
+			> div {
+				background: rgb(102, 58, 183) !important;
+			}
 		}
 		> div:nth-child(3) {
 			flex-grow: 1;
