--- a/halla-app/src/containers/Home/style.less
+++ b/halla-app/src/containers/Home/style.less
@@ -15,6 +15,13 @@
 
 	.layout-pane {
 		overflow: hidden;
+		& > .wrapper {
+			display: flex;
+			flex-direction: column;
+			flex-grow: 1;
+			height: 100%;
+			overflow: hidden;
+		}
 	}
 
 	.tab-system {
