Rooms chat complete

--- a/halla-app/src/containers/Home/style.less
+++ b/halla-app/src/containers/Home/style.less
@@ -14,7 +14,7 @@
 	}
 
 	.layout-pane {
-		overflow: hidden;
+		overflow: hidden !important;
 		& > .wrapper {
 			display: flex;
 			flex-direction: column;
