Time stamps for messages

--- a/halla-app/src/containers/RightPane/style.less
+++ b/halla-app/src/containers/RightPane/style.less
@@ -78,11 +78,17 @@
 					margin: 5px 0;
 					font-weight: normal;
 				}
-				h5 {
+				h5:first-of-type {
 					font-style: italic;
 					color: #b08df1;
 					font-size: 13px;
-					margin-top: 0;
+					margin: 0;
+				}
+				h5:nth-of-type(2) {
+					color: #656565;
+					font-style: italic;
+					font-size: 12px;
+					margin: 0;
 				}
 			}
 
