--- a/halla-app/src/containers/App/style.less
+++ b/halla-app/src/containers/App/style.less
@@ -1,4 +1,4 @@
-// @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+// @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
 
 .fullll {
   margin: 0;
@@ -16,7 +16,7 @@ html, body, #root, .app {
 
 
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.4em;
   color: #4d4d4d;
   margin: 0;
