--- a/halla-app/src/containers/App/style.less
+++ b/halla-app/src/containers/App/style.less
@@ -49,6 +49,7 @@ hr {
 ::-webkit-scrollbar-track-piece {
   background-color: rgb(39, 38, 39);
   -webkit-border-radius: 6px;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
@@ -56,4 +57,5 @@ hr {
   background-color: transparent;
   border: 1px solid #673AB7;
   -webkit-border-radius: 6px;
+  border-radius: 6px;
 }
