Deep links for direct chats

--- a/halla-app/src/containers/RightPane/style.less
+++ b/halla-app/src/containers/RightPane/style.less
@@ -39,6 +39,7 @@
 
 				& > div {
 					margin: 3px !important;
+					cursor: pointer;
 				}
 			}
 
@@ -83,6 +84,7 @@
 					color: #b08df1;
 					font-size: 14px;
 					margin: 0;
+					cursor: pointer;
 
 					& > span {
 						color: #656565;
